objects/Resource_Case__c.object
<CustomObject>
    <fields>
        <fullName>Attachement_URL__c</fullName>
        <description>This field will allow user to enter a URL to the attachment file relevant to the case.</description>
        <label>Attachement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <description>It calculates the age of the Case.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <description>This field stores case notes entered by users.</description>
        <label>Case Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Length__c</fullName>
        <description>Time taken to close the case</description>
        <formula>IF( ISPICKVAL(Case_Status__c, "Closed" ), Closed_Date__c - DATEVALUE(CreatedDate) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Id__c</fullName>
        <description>This Field stores the Id of the Case Owner0</description>
        <label>Case Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <description>This field defines the owner of the case record which is different then the requester.</description>
        <label>Case Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <description>This field is to define the priority on the case.</description>
        <label>Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>P1 - 4 hrs</fullName>
                </value>
                <value>
                    <fullName>P2 - 24 hrs</fullName>
                </value>
                <value>
                    <fullName>P3 - 48 hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC User who has requested the TSN Case.</description>
        <label>SFDC Case Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Service_Type__c</fullName>
        <description>This field stores details about Service type</description>
        <label>Case Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>This Field defines the status of the case.</description>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Summary__c</fullName>
        <description>This field allows user to enter brief summary of the case request.</description>
        <label>Case Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Team_Name__c</fullName>
        <description>This field is to store Team Name the case will be assigned to. The value in this field will be populated from IAM at the time of case creation.</description>
        <label>Case Team Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_resolution_method__c</fullName>
        <label>Case resolution method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Unit Escalations</fullName>
                </value>
                <value>
                    <fullName>TSN Knowledge Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Date of closing of the case</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is to keep track of notes entered by requester or case owner(s) while working on the case.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <description>Method used to contact email,phone etc</description>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It controls the notification mails sent to the users</description>
        <label>Disable Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>This date is entered by user to specify the date when case should be resolved.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_External_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the actual case requester is Cisco Internal User or External User</description>
        <label>Is External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SFDC_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the user is an SFDC user or not.</description>
        <label>Is SFDC Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>This field allows user to select the language for data entry.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Met_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_days_to_due_date__c</fullName>
        <description>Days remaining to due date</description>
        <formula>Due_Date__c - DATEVALUE(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days to due date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_SFDC_Requester_Email__c</fullName>
        <description>Email of the Non SFDC Requester</description>
        <label>Requester Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_SFDC_Requester_Name__c</fullName>
        <description>Name of the Non SFDC Requester</description>
        <label>Requester Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_SFDC_Requester_Role__c</fullName>
        <description>Role of the Non SFDC Requestor</description>
        <label>Requester Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fields it to create relationship between Resource Case object and opportunity.</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Resource_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Locked_for_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the record has been locked due to being in Edit Mode</description>
        <label>Record Locked for Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <description>Time taken to resolve the case</description>
        <formula>Closed_Date__c - DATEVALUE(SLA_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <formula>SLA_Expiration_Date__c - SLA_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Expiration_Date__c</fullName>
        <description>Expiry date of SLA</description>
        <label>SLA Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that the records SLA is expired and should be highlighted in UI for user.</description>
        <label>SLA Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Start_Date__c</fullName>
        <description>This date is used to calculate if the record has been expired for SLA</description>
        <label>SLA Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Code__c</fullName>
        <description>This field defines the reason code depending on value selected in "Case Status" field.</description>
        <label>Status Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Response</fullName>
                </value>
                <value>
                    <fullName>Escalation Response</fullName>
                </value>
                <value>
                    <fullName>TSN Response</fullName>
                </value>
                <value>
                    <fullName>Close Pending</fullName>
                </value>
                <value>
                    <fullName>Child Case</fullName>
                </value>
                <value>
                    <fullName>Client Not Supported</fullName>
                </value>
                <value>
                    <fullName>Opened by mistake</fullName>
                </value>
                <value>
                    <fullName>Insufficient lead time</fullName>
                </value>
                <value>
                    <fullName>Tech Not Supported</fullName>
                </value>
                <value>
                    <fullName>Service Not Supported</fullName>
                </value>
                <value>
                    <fullName>Language Not Supported</fullName>
                </value>
                <value>
                    <fullName>Resolved Successfully</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Technology__c</fullName>
        <description>This field is dependent upon Technology</description>
        <label>Sub-Technology</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_ID__c</fullName>
        <description>This Field defines the ID of the requested team</description>
        <label>Team ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Level__c</fullName>
        <description>This Field defines the level of the requested team</description>
        <label>Team Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>This field stores the technology for the case requested</description>
        <label>Technology</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_locked_Record__c</fullName>
        <description>This field indicates the user who has locked the record in Edit Mode.</description>
        <label>Username locked Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This object is for SE / TSN resource engine Case request process.</description>
    <label>zzResource Case</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>